Pull up following revision(s) (requested by ozaki-r in ticket #1373): 	usr.sbin/rtadvd/config.c: revision 1.36 	usr.sbin/rtadvd/rtadvd.h: revision 1.15 Fix the default value of rltime According to rtadvd.conf(5), the default value of rltime is 1800 seconds. PR bin/51994